# AttriSense

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  ENHANCEMENT_SUMMARY.md  MODEL_CARD.md  QUICKSTART.md  README.md  ai_sql_constructor.py  attrisense_synthetic_hr.csv  build_exit_interview_vector_index.py  config.py  create_readme_assets.py  dashboard.py  data_generator.py  generate_demo_workforce_data.py  generate_diagrams.py  hr_enterprise.db  install_git.py  launch_streamlit_app.py  mkdocs.yml  natural_language_sql.py  predictive_engine.py  project_config.py  rag_engine.py  requirements.txt  run_attrisense.py  setup_git.py  streamlit_app.py  train_retention_risk_model.py
.streamlit/: config.toml
archive/: original_readme.md
career/: README.md
doc/: README.md
docs/: contributing.md  faq.md  glossary.md  index.md  quickstart.md  roadmap.md  troubleshooting.md
outputs/: AttriSense_Beginners_Guide.docx  AttriSense_Pitch.pptx  dashboardCaptureLog.txt  dashboardScreenshotManifest.json  fairness_report.json  metrics_snapshot.txt  nl_sql_eval_report.json  pipeline_run.txt  readmeAssetInventory.txt  shapDashboardCaptureLog.txt  shapInsights.txt  tierFeatureCaptureLog.txt
paper/: README.md  attrisense_ieee.docx  attrisense_ieee.md  attrisense_ieee.tex  attrisense_patent_aligned.docx  attrisense_patent_aligned.md  attrisense_patent_aligned.tex  build_docx.py  build_patent_aligned_docx.py
patent/: 01_patent_strategy.md  04_capstone_report.md  (+8 more)
production/: Dockerfile  Makefile  README.md  pyproject.toml  streamlit_app.py
production/src/attrisense/: __init__.py  causal_uplift.py  compare.py  config.py  fairness.py  gold_questions.py  identity.py  legacy_tabs.py  multilingual_rag.py  nl_sql_eval.py  nl_sql_fallback.py  onboarding.py  slack_alert_mock.py  theme.py
production/tests/: conftest.py  test_compare.py  test_config.py  test_eval.py  test_fairness.py  test_multilingual_rag.py  test_nl_sql_fallback.py  test_nl_sql_validator.py
(+82 files in other folders)
